REtour de baton

--- a/ArchiLog/Projet_Architecture_Logiciel/src/data/config.json
+++ b/ArchiLog/Projet_Architecture_Logiciel/src/data/config.json
@@ -41,6 +41,23 @@
 				"name" : "HardMode",
 				"path" : "plugins.PersonPlus"
 			}
+		},
+		"Action" : {
+
+		},
+		"Evenement": {
+			"CombatEvent" : {
+				"autorun": true,
+				"description" : "Add combat event",
+				"name" : "CombatEvent",
+				"path" : "plugins.CombatEvent"
+			},
+			"HorsCombatEvent" : {
+				"autorun": true,
+				"description" : "Add hors combat event",
+				"name" : "HorsCombatEvent",
+				"path" : "plugins.HorsCombatEvent"
+			}
 		}
 	}
 }
